--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'United States -- History -- Civil War, 1861-1865 -- Fiction'
 - !lcsh 'Mosby, John Singleton, 1833-1916 -- Fiction'
+- GITenberg
 title: Rebel Raider
 url: http://www.gutenberg.org/ebooks/19194
